--- a/CoinTracker/CoinTracker/Modules/List/Views/List.storyboard
+++ b/CoinTracker/CoinTracker/Modules/List/Views/List.storyboard
@@ -25,7 +25,7 @@
             </objects>
             <point key="canvasLocation" x="-377" y="201"/>
         </scene>
-        <!--Top Coins-->
+        <!--CHAINSTOCK-->
         <scene sceneID="j9V-4K-Eln">
             <objects>
                 <viewController storyboardIdentifier="ListViewController" id="la5-X2-q2L" customClass="ListViewController" customModule="CoinTracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -51,7 +51,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="c1g-la-0Ds"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Top Coins" largeTitleDisplayMode="always" id="RTR-rW-GQf"/>
+                    <navigationItem key="navigationItem" title="CHAINSTOCK" largeTitleDisplayMode="always" id="RTR-rW-GQf">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="info" id="Vhh-49-jTt"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="mYe-Rv-nCk" id="ra2-3b-J9i"/>
                     </connections>
@@ -61,4 +63,7 @@
             <point key="canvasLocation" x="354" y="200"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="info" width="23" height="23"/>
+    </resources>
 </document>
